hphp/hack/test/ifc/check/shape_pc.php.exp
=== IFC analysis results for shape_pc.php
File "shape_pc.php", line 36, characters 3-23:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "shape_pc.php", line 12, characters 43-73:
  This may be the data source with policy `B`
  File "shape_pc.php", line 9, characters 43-73:
  This may be the data sink with policy `A`
  File "shape_pc.php", line 31, characters 7-20:
  Another program point contributing to the illegal flow
  File "shape_pc.php", line 33, characters 5-16:
  Another program point contributing to the illegal flow
